--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<div class="card fat">
 						<div class="card-body">
 							<h4 class="card-title">Login</h4>
-							<form method="POST" class="my-login-validation" novalidate="">
+							<form method="POST" class="my-login-validation" novalidate="" action="">
 								<div class="form-group">
 									<label for="email">E-Mail Address</label>
 									<input id="email" type="email" class="form-control" name="email" value="" required autofocus>
@@ -31,7 +31,7 @@
 
 								<div class="form-group">
 									<label for="password">Password
-										<a href="forgot.php" class="float-right">
+										<a href="forgot.html" class="float-right">
 											Forgot Password?
 										</a>
 									</label>
@@ -54,7 +54,7 @@
 									</button>
 								</div>
 								<div class="mt-4 text-center">
-									Don't have an account? <a href="register.php">Create One</a>
+									Don't have an account? <a href="register.html">Create One</a>
 								</div>
 							</form>
 						</div>
