--- a/register.html
+++ b/register.html
@@ -60,7 +60,7 @@
 									</button>
 								</div>
 								<div class="mt-4 text-center">
-									Already have an account? <a href="index.php">Login</a>
+									Already have an account? <a href="index.html">Login</a>
 								</div>
 							</form>
 						</div>
